[gd_scene load_steps=4 format=3 uid="uid://bsbtai88mb8hq"]

[ext_resource type="Script" path="res://scripts/puzzles/switch-puzzle/Switch.gd" id="1_dxgl4"]
[ext_resource type="Texture2D" uid="uid://cg44664s6ywtq" path="res://icon.svg" id="2_33fy3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sxvu4"]

[node name="Switch" type="Node2D"]
position = Vector2(-217, -1)
script = ExtResource("1_dxgl4")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_sxvu4")

[node name="SwitchSprite" type="Sprite2D" parent="."]
scale = Vector2(0.40625, 0.40625)
texture = ExtResource("2_33fy3")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
